[gd_scene load_steps=5 format=3 uid="uid://drb600rubyjf6"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_buk5e"]
[ext_resource type="PackedScene" uid="uid://cub7k8udl6uuu" path="res://scenes/weapons/weapon_manager.tscn" id="2_shuod"]
[ext_resource type="Texture2D" uid="uid://d21hu8370w5ih" path="res://assets/models/weapons/crosshair.png" id="2_uww38"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wrds2"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_buk5e")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.53516, 0)

[node name="ProjectileOrigin" type="Marker3D" parent="Camera"]
transform = Transform3D(-0.999124, 0, 0.0418407, 0, 1, 0, -0.0418407, 0, -0.999124, 0.286315, -0.193136, -0.908272)

[node name="WeaponManager" parent="Camera" node_paths=PackedStringArray("projectile_origin") instance=ExtResource("2_shuod")]
transform = Transform3D(-0.997124, -0.0617655, 0.043927, -0.0618003, 0.998088, 0.000566565, -0.0438781, -0.00214976, -0.999034, 0.289, -0.315, -0.492)
projectile_origin = NodePath("../ProjectileOrigin")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00666, 0)
shape = SubResource("CapsuleShape3D_wrds2")

[node name="CrosshairCanvas" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CrosshairCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CrosshairCanvas/CenterContainer"]
layout_mode = 2
texture = ExtResource("2_uww38")

[node name="ShootCooldown" type="Timer" parent="." groups=["player"]]
